# Singleton

./: .gitattributes  .gitignore  .travis.yml  Build.bat  Build.sh  CMakeLists.txt  LICENSE  README.md  appveyor.yml
Singleton/Includes/Singleton/: Singleton.hpp
Singleton/Includes/Singleton/Private/: SpinLock.hpp
Singleton/Sources/: Test.cpp
